--- a/pom.xml
+++ b/pom.xml
@@ -17,8 +17,10 @@
 	<version>0.0.1-SNAPSHOT</version>
 	<name>tenbi</name>
 	<properties>
-		<java.version>21</java.version>
-	</properties>
+       <java.version>21</java.version>
+       <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+       <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+    </properties>
 
 	<dependencies>
 		<!-- Spring Boot starters -->
@@ -38,6 +40,10 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-oauth2-client</artifactId>
 		</dependency>
+		<dependency>
+          <groupId>org.springframework.boot</groupId>
+          <artifactId>spring-boot-starter-actuator</artifactId>
+       </dependency>
 
 		<!-- MySQL -->
 		<dependency>
