--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -46,3 +46,11 @@ spring.web.resources.static-locations=classpath:/static/,file:uploads/
 spring.servlet.multipart.max-file-size=40MB
 spring.servlet.multipart.max-request-size=40MB
 spring.http.multipart.enabled=true
+
+# ========================
+# RENDER PROXY CONFIGURATION
+# ========================
+# Habilita a Spring Boot para procesar los encabezados 'X-Forwarded-*'
+# que Render envía para indicar el protocolo (HTTPS) y el Host (tenbi-backend.onrender.com).
+# Esto corrige la redirección a localhost y asegura que se use HTTPS.
+server.forward-headers-strategy=FRAMEWORK
