--- a/pom.xml
+++ b/pom.xml
@@ -101,7 +101,7 @@
 		</dependency>
 		<dependency>
 			<groupId>com.cloudinary</groupId>
-			<artifactId>cloudinary-core</artifactId>
+			<artifactId>cloudinary-http44</artifactId>
 			<version>1.39.0</version>
 		</dependency>
 
