--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -42,6 +42,7 @@ spring.mail.test-connection=false # Cambiado a false para evitar fallos de conex
 # ========================
 spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.ImplicitNamingStrategyLegacyJpaImpl
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+spring.web.resources.static-locations=classpath:/static/,file:uploads/
 spring.servlet.multipart.max-file-size=40MB
 spring.servlet.multipart.max-request-size=40MB
 spring.http.multipart.enabled=true
